k8s/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hackathon-ingress
spec:
  rules:
    - host: hackathon-api.substring.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: src-api
                port: 
                  number: 80
    - host: hackathon.substring.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: src-frontend
                port: 
                  number: 3000
